# yam_agri_core

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  compose_rendered.yml  pyproject.toml
apps/yam_agri_core/: README.md  pyproject.toml  setup.py
apps/yam_agri_core/tests/: test_doc_validations.py
apps/yam_agri_core/yam_agri_core/: __init__.py  hooks.py  modules.txt  patches.txt  uninstall.py
apps/yam_agri_core/yam_agri_core/config/: desktop.py  docs.py
apps/yam_agri_core/yam_agri_core/doctype/lot/: lot.py
apps/yam_agri_core/yam_agri_core/doctype/nonconformance/: nonconformance.py
apps/yam_agri_core/yam_agri_core/doctype/qc_test/: qc_test.json  qc_test.py
apps/yam_agri_core/yam_agri_core/fixtures/: lot_workflow.json  yemen_fixtures.json
apps/yam_agri_core/yam_agri_core/public/js/: yam_agri_core.bundle.js
apps/yam_agri_core/yam_agri_core/tests/: test_doc_validations.py
apps/yam_agri_core/yam_agri_core/translations/: ar.csv
apps/yam_agri_core/yam_agri_core/www/: evidence-pack-auditor.html  evidence-pack-auditor.py
apps/yam_agri_core/yam_agri_core/yam_agri/: __init__.py
apps/yam_agri_core/yam_agri_core/yam_agri_core/: boot.py  dev_seed.py  install.py  metadata_export.py  perm_tools.py  site_permissions.py  smoke.py  workflow_setup.py  workspace_setup.py
apps/yam_agri_core/yam_agri_core/yam_agri_core/ai/: agr_cereal_001.py
apps/yam_agri_core/yam_agri_core/yam_agri_core/api/: agr_cereal_001.py  ai_assist.py  evidence_pack.py  observation_monitoring.py  scale_ticket_import.py
apps/yam_agri_core/yam_agri_core/yam_agri_core/health/: checks.py
apps/yam_agri_core/yam_agri_core/yam_agri_core/permissions/: has_permission.py  query_conditions.py  site_scope.py  validators.py
apps/yam_agri_core/yam_agri_core/yam_agri_core/seed/: agr_cereal_001_demo.py  agr_cereal_001_sample_data.py  dev_data.py  phase4_yemen_sample_data_250.json
apps/yam_agri_core/yam_agri_core/yam_agri_core/tests/: test_agr_cereal_001.py  test_ai_assist_governance.py  test_doc_validations.py  test_frappe_skill_agent.py  (+6 more)
(+249 files in other folders)
